feat(api): GROW-65 | add cool meetings, attendance features
