# docs/swagger.json
@@ -341,6 +341,86 @@
                 }
             }
         },
+        "/v2/cools/meetings": {
+            "post": {
+                "description": "Create Cool Meetings",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cools-meetings"
+                ],
+                "summary": "Create Meeting",
+                "parameters": [
+                    {
+                        "description": "Create Meeting Request JSON",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateMeetingRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "mandatory header to access endpoint",
+                        "name": "X-API-Key",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Response indicates that the request succeeded and the resources has been fetched and transmitted in the message body",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.CreateMeetingResponse"
+                                        },
+                                        "metadata": {
+                                            "$ref": "#/definitions/models.Metadata"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error. This can happen if there is an error validation while create account",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.ErrorResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "errors": {
+                                            "$ref": "#/definitions/models.ErrorValidateResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/v2/events": {
             "get": {
                 "security": [
@@ -1044,7 +1124,7 @@
                 "tags": [
                     "users-internal"
                 ],
-                "summary": "Update User Profile",
+                "summary": "Update User Profile Internally",
                 "parameters": [
                     {
                         "type": "string",
@@ -2167,6 +2247,26 @@
                 }
             }
         },
+        "models.CreateAttendanceRequest": {
+            "type": "object",
+            "properties": {
+                "meetingId": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CreateMemberAttendanceRequest"
+                    }
+                },
+                "newJoiners": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CreateNewJoinerAttendanceRequest"
+                    }
+                }
+            }
+        },
         "models.CreateEventRegistrationRecordRequest": {
             "type": "object",
             "required": [
@@ -2689,6 +2789,149 @@
                 }
             }
         },
+        "models.CreateMeetingRequest": {
+            "type": "object",
+            "required": [
+                "coolCode",
+                "meetingDate",
+                "meetingEndAt",
+                "meetingStartAt"
+            ],
+            "properties": {
+                "attendance": {
+                    "$ref": "#/definitions/models.CreateAttendanceRequest"
+                },
+                "coolCode": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "markAttendanceNow": {
+                    "type": "boolean"
+                },
+                "meetingDate": {
+                    "type": "string"
+                },
+                "meetingEndAt": {
+                    "type": "string"
+                },
+                "meetingStartAt": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateMeetingResponse": {
+            "type": "object",
+            "properties": {
+                "attendanceId": {
+                    "type": "string"
+                },
+                "coolCode": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "meetingDate": {
+                    "type": "string"
+                },
+                "meetingEndAt": {
+                    "type": "string"
+                },
+                "meetingStartAt": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CreateMemberAttendanceResponse"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "newJoiners": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CreateNewJoinerAttendanceResponse"
+                    }
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateMemberAttendanceRequest": {
+            "type": "object",
+            "required": [
+                "communityId"
+            ],
+            "properties": {
+                "communityId": {
+                    "type": "string"
+                },
+                "isPresent": {
+                    "type": "boolean"
+                },
+                "remarks": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateMemberAttendanceResponse": {
+            "type": "object",
+            "properties": {
+                "attendanceId": {
+                    "type": "string"
+                },
+                "communityId": {
+                    "type": "string"
+                },
+                "isPresent": {
+                    "description": "Name         string `json:\"name\"`",
+                    "type": "boolean"
+                },
+                "remarks": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateNewJoinerAttendanceRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "phoneNumber"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateNewJoinerAttendanceResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateOtherEventRegistrationRecordRequest": {
             "type": "object",
             "required": [
@@ -2751,6 +2994,9 @@
                     "maxLength": 3,
                     "minLength": 3,
                     "example": "001"
+                },
+                "coolCode": {
+                    "type": "string"
                 },
                 "coolId": {
                     "type": "integer",
@@ -2834,6 +3080,9 @@
                     "type": "string"
                 },
                 "communityId": {
+                    "type": "string"
+                },
+                "coolCode": {
                     "type": "string"
                 },
                 "coolId": {
@@ -2937,6 +3186,7 @@
         "models.CreateVolunteerRequest": {
             "type": "object",
             "required": [
+                "coolCode",
                 "coolId",
                 "dateOfBirth",
                 "department_code",
@@ -2956,6 +3206,9 @@
                     "maxLength": 3,
                     "minLength": 3,
                     "example": "001"
+                },
+                "coolCode": {
+                    "type": "string"
                 },
                 "coolId": {
                     "type": "integer",
@@ -3039,6 +3292,9 @@
                     "type": "string"
                 },
                 "communityId": {
+                    "type": "string"
+                },
+                "coolCode": {
                     "type": "string"
                 },
                 "coolId": {
@@ -3338,6 +3594,9 @@
                     "type": "string"
                 },
                 "communityId": {
+                    "type": "string"
+                },
+                "coolCode": {
                     "type": "string"
                 },
                 "coolId": {
@@ -3755,6 +4014,9 @@
                 "communityId": {
                     "type": "string"
                 },
+                "coolCode": {
+                    "type": "string"
+                },
                 "coolId": {
                     "type": "integer",
                     "example": 1
@@ -3854,6 +4116,9 @@
                     "type": "string"
                 },
                 "communityId": {
+                    "type": "string"
+                },
+                "coolCode": {
                     "type": "string"
                 },
                 "coolId": {
@@ -4028,6 +4293,10 @@
                 "communityId": {
                     "type": "string"
                 },
+                "coolCode": {
+                    "type": "string",
+                    "example": "C014KG56DC0EX5V37QMMXTAE5F9"
+                },
                 "coolId": {
                     "type": "integer",
                     "example": 1
@@ -4141,6 +4410,31 @@
                 }
             }
         },
+        "models.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {},
+                "errors": {},
+                "message": {
+                    "type": "string",
+                    "example": "Request has been successfully processed."
+                },
+                "metadata": {
+                    "$ref": "#/definitions/models.Metadata"
+                },
+                "pagination": {
+                    "$ref": "#/definitions/models.CursorInfo"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "OK"
+                }
+            }
+        },
         "models.RoleResponse": {
             "type": "object",
             "properties": {
@@ -4190,6 +4484,9 @@
                     "maxLength": 3,
                     "minLength": 3,
                     "example": "001"
+                },
+                "coolCode": {
+                    "type": "string"
                 },
                 "coolId": {
                     "type": "integer"
@@ -4549,6 +4846,10 @@
                     "minLength": 3,
                     "example": "001"
                 },
+                "coolCode": {
+                    "description": "TODO: change to coolId in the future, and change the coolCode to coolInf",
+                    "type": "string"
+                },
                 "coolId": {
                     "type": "integer"
                 },
@@ -4654,6 +4955,10 @@
                     "type": "string"
                 },
                 "communityId": {
+                    "type": "string"
+                },
+                "coolCode": {
+                    "description": "TODO: change to coolId in the future, and change the coolCode to coolInf",
                     "type": "string"
                 },
                 "coolId": {
