# internal/models/cool_model.go
@@ -2,25 +2,31 @@ package models
 
 import (
 	"database/sql"
-	"github.com/lib/pq"
+	"encoding/json"
 	"time"
+
+	"github.com/lib/pq"
 )
 
-var TYPE_COOL = "cool"
+var (
+	TYPE_COOL        = "cool"
+	TYPE_COOL_MEMBER = "coolMember"
+)
 
 type Cool struct {
 	ID                      int
+	Code                    string
 	Name                    string
-	Description             string
+	Description             *string
 	CampusCode              string
 	FacilitatorCommunityIds pq.StringArray `gorm:"type:text[]"`
 	LeaderCommunityIds      pq.StringArray `gorm:"type:text[]"`
 	CoreCommunityIds        pq.StringArray `gorm:"type:text[]"`
 	Category                string
-	Gender                  string
-	Recurrence              string
+	Gender                  *string
+	Recurrence              *string
 	LocationType            string
-	LocationName            string
+	LocationName            *string
 	Status                  string
 	CreatedAt               *time.Time
 	UpdatedAt               *time.Time
@@ -30,6 +36,7 @@ type Cool struct {
 func (c *CreateCoolResponse) ToResponse() CreateCoolResponse {
 	return CreateCoolResponse{
 		Type:         TYPE_COOL,
+		Code:         c.Code,
 		Name:         c.Name,
 		Description:  c.Description,
 		CampusCode:   c.CampusCode,
@@ -49,19 +56,20 @@ func (c *CreateCoolResponse) ToResponse() CreateCoolResponse {
 type (
 	CreateCoolRequest struct {
 		Name                    string   `json:"name" validate:"required,min=1,max=50,nospecial" example:"Professionals"`
-		Description             *string  `json:"description"`
+		Description             string   `json:"description"`
 		CampusCode              string   `json:"campusCode" validate:"required,min=3,max=3"`
 		FacilitatorCommunityIds []string `json:"facilitatorCommunityIds" validate:"required"`
 		LeaderCommunityIds      []string `json:"leaderCommunityIds" validate:"required"`
-		CoreCommunityIds        []string `json:"coreCommunityIds"`
+		CoreCommunityIds        []string `json:"coreCommunityIds" validate:"omitempty"`
 		Category                string   `json:"category" validate:"required"`
-		Gender                  *string  `json:"gender" validate:"omitempty,oneof=male female all"`
-		Recurrence              *string  `json:"recurrence"`
+		Gender                  string   `json:"gender" validate:"omitempty,oneof=male female all"`
+		Recurrence              string   `json:"recurrence"`
 		LocationType            string   `json:"locationType" validate:"required,oneof=offline onsite hybrid"`
-		LocationName            *string  `json:"locationName"`
+		LocationName            string   `json:"locationName"`
 	}
 	CreateCoolResponse struct {
 		Type         string                      `json:"type"`
+		Code         string                      `json:"code"`
 		Name         string                      `json:"name"`
 		Description  string                      `json:"description"`
 		CampusCode   string                      `json:"campusCode"`
@@ -86,7 +94,7 @@ type (
 func (c *GetAllCoolOptionsResponse) ToResponse() GetAllCoolOptionsResponse {
 	return GetAllCoolOptionsResponse{
 		Type:       TYPE_COOL,
-		ID:         c.ID,
+		Code:       c.Code,
 		Name:       c.Name,
 		CampusCode: c.CampusCode,
 		Leaders:    c.Leaders,
@@ -97,6 +105,7 @@ func (c *GetAllCoolOptionsResponse) ToResponse() GetAllCoolOptionsResponse {
 type (
 	GetAllCoolOptionsDBOutput struct {
 		ID                 int
+		Code               string
 		Name               string
 		CampusCode         string
 		LeaderCommunityIds pq.StringArray `gorm:"type:text[]"`
@@ -104,7 +113,7 @@ type (
 	}
 	GetAllCoolOptionsResponse struct {
 		Type       string                      `json:"type"`
-		ID         int                         `json:"id"`
+		Code       string                      `json:"code"`
 		Name       string                      `json:"name"`
 		CampusCode string                      `json:"campusCode"`
 		CampusName string                      `json:"campusName"`
@@ -115,6 +124,7 @@ type (
 
 type GetCoolDetailResponse struct {
 	Type         string                      `json:"type"`
+	Code         string                      `json:"code"`
 	Name         string                      `json:"name"`
 	Description  string                      `json:"description"`
 	CampusCode   string                      `json:"campusCode"`
@@ -129,3 +139,28 @@ type GetCoolDetailResponse struct {
 	LocationName string                      `json:"locationName"`
 	Status       string                      `json:"status"`
 }
+
+type (
+	GetCoolMembersByIdDBOutput struct {
+		CommunityID string          `gorm:"column:community_id"`
+		Name        string          `gorm:"column:name"`
+		CoolCode    string          `gorm:"column:cool_code"`
+		UserTypes   json.RawMessage `gorm:"column:user_types"` // For the JSON data
+	}
+	// Optional: Define a UserType struct to unmarshal the JSON into
+	UserTypeDBOutput struct {
+		Type string `json:"type"`
+		Name string `json:"name"`
+	}
+	GetCoolMemberByCoolCodeParameter struct {
+		// Id   int    `json:"id" validate:"required,numeric"`
+		Code string `json:"code" validate:"required"`
+	}
+	GetCoolMemberByIdResponse struct {
+		Type        string             `json:"type"`
+		CommunityId string             `json:"communityId"`
+		Name        string             `json:"name"`
+		CoolCode    string             `json:"coolCode"`
+		UserType    []UserTypeDBOutput `json:"userTypes"`
+	}
+)
